[package]
name = "vip_port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "0.14.28", features = ["full"]}
tokio = { version = "1", features = ["full"]}
serde_json = "1.0"
chrono = "0.4.38"
rust-crypto = "0.2.36"
anyhow = "1.0.83"
string-builder = "0.2.0"
time = "0.1.45"